<?xml version="1.0"?>
<package format="2">
  <name>ex_msgs</name>
  <version>0.1.0</version>
  <description>ROS turtorial package to learn the service</description>

  <maintainer email="martin@ff00ff.kr">Martin</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
